# zoom-to-isaca-cpe

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh  zoom_cpe.py
.github/workflows/: ci.yml
tests/: test_zoom_cpe.py
